@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.188 2005/08/01 15:01:12 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.189 2005/08/02 08:25:45 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -27,6 +27,9 @@ PH/05 Replaced all Tom's calls to snprintf() with calls to the internal
 
 PH/06 The use of forbid_filter_existstest now also locks out the use of the
       ${stat: expansion item.
+
+PH/07 Changed "SMTP protocol violation: synchronization error" into "SMTP
+      protocol synchronization error", to keep the pedants happy.
 
 
 Exim version 4.52
